--- a/src/app/componentes/menu-card/menu-card.component.html
+++ b/src/app/componentes/menu-card/menu-card.component.html
@@ -1,40 +1,95 @@
 <div class="container" >
+
+  <div class= "row justify-content-around">
     <div class="card">
-      <img class="img-thumbnail"   src="./assets/imagenes/cerebroadw.jpg" alt="Avatar" style="width:100%">
+      <img class="img-thumbnail"   src="./assets/imagenes/cerebroadw.jpg" class="card-img-top">
       <h1>Velocidad y agilidad aritmética </h1>
       <p class="title">Juego de agilidad mental</p>
       <p>UTN FRA </p>
-  
-      <a href="#"><i class="fa fa-dribbble"></i></a> 
-      <a href="#"><i class="fa fa-twitter"></i></a> 
-      <a href="#"><i class="fa fa-linkedin"></i></a> 
-      <a href="#"><i class="fa fa-facebook"></i></a> 
-      <p>           <button class="button"  (click)="Juego('Agilidad')">Jugar</button></p>
-    
+
+      <div class="redes">
+        <a href="#"><i class="fa fa-dribbble redes"></i></a> 
+        <a href="#"><i class="fa fa-twitter redes"></i></a> 
+        <a href="#"><i class="fa fa-linkedin redes"></i></a> 
+        <a href="#"><i class="fa fa-facebook redes"></i></a> 
+      </div>
+      <p><button class="button"  (click)="Juego('Agilidad')">Jugar</button></p>
     </div>
   
     <div class="card">
-      <img class="img-thumbnail" src="./assets/imagenes/pptadw.jpg" alt="Avatar" style="width:100%">
+      <img class="img-thumbnail" src="./assets/imagenes/pptadw.jpg" class="card-img-top">
       <h1>Piedra Papel o Tijera</h1>
       <p class="title">Juega contra la máquina</p>
       <p>UTN FRA </p>
-      
-      <a href="#"><i class="fa fa-dribbble"></i></a> 
-      <a href="#"><i class="fa fa-twitter"></i></a> 
-      <a href="#"><i class="fa fa-linkedin"></i></a> 
-      <a href="#"><i class="fa fa-facebook"></i></a> 
-      <p>           <button class="button"  (click)="Juego('PPT')">Jugar</button></p>
+
+      <div class="redes">
+        <a href="#"><i class="fa fa-dribbble redes"></i></a> 
+        <a href="#"><i class="fa fa-twitter redes"></i></a> 
+        <a href="#"><i class="fa fa-linkedin redes"></i></a> 
+        <a href="#"><i class="fa fa-facebook redes"></i></a> 
+      </div>      
+      <p><button class="button"  (click)="Juego('PPT')">Jugar</button></p>
     </div>
+
     <div class="card">
-      <img  class="img-thumbnail"  src="./assets/imagenes/adivinaadw.jpg" alt="Avatar" style="width:100%">
+      <img  class="img-thumbnail"  src="./assets/imagenes/adivinaadw.jpg" class="card-img-top">
       <h1>Adivina el número secreto</h1>
-      <p class="title">Juega de estrategia</p>
+      <p class="title">Juego de estrategia</p>
       <p>UTN FRA </p>
       
-      <a href="#"><i class="fa fa-dribbble"></i></a> 
-      <a href="#"><i class="fa fa-twitter"></i></a> 
-      <a href="#"><i class="fa fa-linkedin"></i></a> 
-      <a href="#"><i class="fa fa-facebook"></i></a> 
-      <p>           <button class="button"  (click)="Juego('Adivina')">Jugar</button></p>
+      <div class="redes">
+        <a href="#"><i class="fa fa-dribbble redes"></i></a> 
+        <a href="#"><i class="fa fa-twitter redes"></i></a> 
+        <a href="#"><i class="fa fa-linkedin redes"></i></a> 
+        <a href="#"><i class="fa fa-facebook redes"></i></a> 
+      </div>
+      <p><button class="button"  (click)="Juego('Adivina')">Jugar</button></p>
+    </div>
+
+    <div class="card">
+      <img  class="img-thumbnail"  src="./assets/imagenes/anagramaadw.jpg" class="card-img-top">
+      <h1>Anagrama</h1>
+      <p class="title">Juego para crear palabras como resultado de la transposicion de letra de otra palabra.</p>
+      <p>UTN FRA </p>
+      
+      <div class="redes">
+        <a href="#"><i class="fa fa-dribbble redes"></i></a> 
+        <a href="#"><i class="fa fa-twitter redes"></i></a> 
+        <a href="#"><i class="fa fa-linkedin redes"></i></a> 
+        <a href="#"><i class="fa fa-facebook redes"></i></a> 
+      </div>
+      <p><button class="button"  (click)="Juego('Anagrama')">Jugar</button></p>
+    </div>
+
+    <div class="card">
+      <img  class="img-thumbnail"  src="./assets/imagenes/tatetiadw.png" class="card-img-top">
+      <h1>Tateti</h1>
+      <p class="title">Juego de estrategia entre dos jugadores: O y X, que marcan los espacios de un tablero de 3×3 alternadamente.</p>
+      <p>UTN FRA </p>
+      
+      <div class="redes">
+        <a href="#"><i class="fa fa-dribbble redes"></i></a> 
+        <a href="#"><i class="fa fa-twitter redes"></i></a> 
+        <a href="#"><i class="fa fa-linkedin redes"></i></a> 
+        <a href="#"><i class="fa fa-facebook redes"></i></a> 
+      </div>
+      <p><button class="button"  (click)="Juego('Tateti')">Jugar</button></p>
+    </div>
+
+    <div class="card">
+      <img  class="img-thumbnail"  src="./assets/imagenes/simonDiceadw.jpg" class="card-img-top">
+      <h1>Simón dice</h1>
+      <p class="title">Juega de memoria</p>
+      <p>UTN FRA </p>
+      
+      <div class="redes">
+        <a href="#"><i class="fa fa-dribbble redes"></i></a> 
+        <a href="#"><i class="fa fa-twitter redes"></i></a> 
+        <a href="#"><i class="fa fa-linkedin redes"></i></a> 
+        <a href="#"><i class="fa fa-facebook redes"></i></a> 
+      </div>
+      <p><button class="button"  (click)="Juego('Simon')">Jugar</button></p>
     </div>
   </div>
+
+</div>
