--- a/src/app/componentes/quien-soy/quien-soy.component.html
+++ b/src/app/componentes/quien-soy/quien-soy.component.html
@@ -11,7 +11,7 @@
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="./QuienSoy#quien">Quien</a></li>
-          <li><a href="/TP_LAV4_2017/QuienSoy#que">Ques es</a></li>
+          <li><a href="./QuienSoy#que">Ques es</a></li>
           <li><a href="./QuienSoy#donde">Donde</a></li>
         </ul>
       </div>
@@ -20,9 +20,18 @@
   
   <!-- First Container -->
   <div id ="quiwn"class="container-fluid bg-1 text-center">
-    <h3 class="margin">Quién Soy?</h3>
-    <img src="./assets/imagenes/fotoCarnetadw.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
-    <h3>Soy Un alumno de la UTN FRA</h3>
+
+    <div class="row justify-content-around form">
+      <div class= "col-6">
+        <img src="./assets/imagenes/fotoCarnetadw.jpg" class="img-responsive img-circle margin marginTop" style="display:inline" alt="Bird" width="350" height="350">
+      </div>
+      <div class= "col-6">
+        <h3 class="margin">Quién Soy?</h3>
+        <h3 class="margin">Soy Andrés Wüthrich, alumno de la UTN FRA</h3>
+        <h3>Juego Simón dice</h3>
+        <h3>Juego de memoria visual para jugar sólo o entre varios. Consiste en recordar secuencia de colores y repetirlas en el orden correcto.</h3>
+      </div>
+    </div>
   </div>
   
   <!-- Second Container -->
@@ -56,5 +65,5 @@
   
   <!-- Footer -->
   <footer class="container-fluid bg-4 text-center">
-    <p>Modificado por <a href="https://www.octavio.com.ar">www.octavio.com.ar</a></p> 
+    <p>Modificado por <a href="https://www.wuthrich.com.ar">www.wuthrich.com.ar</a></p> 
   </footer>
