--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -21,37 +21,51 @@
     </div>
   </div>
 </div-->
- <div class="container" >
-  <div class="jumbotron" style="padding:50px;">
-    <form action="return true;">
-      <div class="imgcontainer">
-        <img src="./assets/imagenes/loginadw.jpg" alt="Avatar" class="avatar" max-width="104" >
-      </div>
+<div class="container" >
+  <div class="row justify-content-around form">
 
-      <div class="container">
-        <label><b>Usuario</b></label>
-        <input type="text" placeholder="Usuario"  [(ngModel)]="usuario"  name="uname" required>
+   <!--<div class="jumbotron" style="padding:50px;"> -->
+    <!-- <form action="return true;"> -->
+      <!-- <div class= "col-sm-6 col-lg-3"> -->
+      <div class= "col-6">
 
-        <label><b>Clave</b></label>
-        <input type="password" placeholder="Clave"  [(ngModel)]="clave" name="psw" required>
-            
-        <button *ngIf="logeando"  (click)="MoverBarraDeProgreso()" >Ingresar</button>
-       
-        <div *ngIf="!logeando" class="progress">
-            <div class="progress-bar progress-bar-info progress-bar-striped active" [class]="clase" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" [style.width]="ProgresoDeAncho" >
-              {{progresoMensaje}} - {{progreso}}%
-            </div>
+        <div class="imgcontainer">
+          <img src="./assets/imagenes/loginadw.jpg" alt="Avatar" class="avatar" max-width="104" >
         </div>
-       
-        <input type="checkbox" checked="checked"> Recordar mis datos
+
       </div>
 
-      <div class="container" style="background-color:#f1f1f1">
-        <button type="button" class="cancelbtn">Cancelar</button>
-        <button type="button" class="aceptbtn" routerLink="/Registro" >Registrarse</button>
-        <span class="psw">Te olvidaste <a href="#">la clave?</a></span>
+      <!-- <div class= "col-sm-6 col-lg-3"> -->
+      <div class= "col-6">
+
+        <div class="container">
+          <label><b>Usuario</b></label>
+          <input type="text" placeholder="Usuario"  [(ngModel)]="usuario"  name="uname" required>
+
+          <label><b>Clave</b></label>
+          <input type="password" placeholder="Clave"  [(ngModel)]="clave" name="psw" required>
+              
+          <button *ngIf="logeando"  (click)="MoverBarraDeProgreso()" >Ingresar</button>
+        
+          <div *ngIf="!logeando" class="progress">
+              <div class="progress-bar progress-bar-info progress-bar-striped active" [class]="clase" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" [style.width]="ProgresoDeAncho" >
+                {{progresoMensaje}} - {{progreso}}%
+              </div>
+          </div>
+        
+          <label>
+            <input type="checkbox" checked="checked"> Recordar mis datos
+          </label>
+        </div>
+
+        <div class="container" style="background-color:#f1f1f1">
+          <button type="button" class="cancelbtn" routerLink="/Principal">Cancelar</button>
+          <button type="button" class="aceptbtn" routerLink="/Registro" >Registrarse</button>
+          <span class="psw">Te olvidaste <a href="#">la clave?</a></span>
+        </div>
+
       </div>
-     
-    </form>
+      
+    <!-- </form> -->
   </div>
 </div>
