--- a/src/app/componentes/menu-card/menu-card.component.css
+++ b/src/app/componentes/menu-card/menu-card.component.css
@@ -1,57 +1,71 @@
+.container{
+  font-family: sans-serif;
+  border: 10px solid #f1f1f1;
+  padding: 10px;
+  background-image:url('../../../assets/imagenes/backTron2adw.png');
+}
+
+input[type=text], input[type=password] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  /* display: inline-block; */
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
 .card {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px; /* 5px rounded corners */
     max-width: 300px;
-   height: 100%;
+    height: 100%;
     margin: 10px;
     padding-bottom: 10px;
     float: left;
-  background-color: #DEF3A6;
+    background-color: grey;
     text-align: center;
 }
 
-/* Add rounded corners to the top left and the top right corner of the image */
-img {
-    border-radius: 5px 5px 0 0;
-    width: 200px;
-    height: 200px;
-}/* Add some padding inside the card container */
-.container {
-    padding: 2px 16px;
+/* Add some padding inside the card container */
+.container{
+  padding: 2px 16px;
+  font-family: sans-serif;
+}
+.redes {
+  padding: 2px;
+  margin: 5px;
 }
 
-
 .button{
-    margin-left: 1px;
+    /* margin-left: 10px; */
     display: inline-block;
-    width: 90%;
-    padding: 5px 15px;
+    width: 100%;
     font-size: 24px;
     text-align: center;
     cursor: pointer;
     outline: none;
     color: #fff;
-    background-color: #4CAF50;
+    background-color: rgb(76, 30, 241);
     border: none;
-    border-radius: 15px;
+    border-radius: 5px;
     box-shadow: 0 9px #999;
 
     border: none;
     outline: 0;
  
-    padding: 8px;
+    padding: 15px;
     color: white;
    /* background-color: #000;*/
-    text-align: center;
-    cursor: pointer;
-    width: 100%;
+  }
+
+  .button:hover {
+    background-color: #b30b89;
+    opacity: 0.8;
   }
   
-  .button:hover {background-color: #3e8e41}
-  
   .button:active {
-    background-color: #3e8e41;
+    background-color: #3411fc;
     box-shadow: 0 5px #666;
     transform: translateY(4px);
   }
