--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -1,4 +1,4 @@
-<!--div>
+<!-- <div>
     <button routerLink="/Principal">Principal</button>
     <button (click)="Juego('Adivina')">Adivina</button>
     <button (click)="Juego('Agilidad')">Agilidad</button>
@@ -6,9 +6,9 @@
     <button (click)="Juego('AgilidadaMasListado')">Agilidad+listado</button>  
     <button routerLink="/error">Error</button>
   
-</div-->
+</div> -->
 
-<!--nav class="navbar navbar-inverse">
+<!-- <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
         <a class="navbar-brand" routerLink="/Principal">Inicio</a>
@@ -25,30 +25,35 @@
           <li><a href="#"><span class="glyphicon glyphicon-log-out"></span> Salir</a></li>
         </ul>
     </div>
-  </nav-->
+  </nav> -->
   <nav class="navbar navbar-inverse">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-            <span class="icon-bar"></span>
-                                  
-          </button>
-          <a class="navbar-brand" routerLink="/Principal">Inicio</a>
-        </div>
-        <div class="collapse navbar-collapse" id="myNavbar">
-            <ul class="nav navbar-nav">
-                <li class="active"><a routerLink="/Juegos">Menú de Juegos</a></li>
-                <li><a data-toggle="tooltip" title="Hooray!" (click)="Juego('Adivina')">Adivina</a></li>
-                <li><a  (click)="Juego('Agilidad')">Agilidad</a></li>
-                <li><a  (click)="Juego('AdivinaMasListado')">Adivina+listado</a></li>
-                <li><a  (click)="Juego('AgilidadaMasListado')">Agilidad+listado</a></li>
-              </ul>
-              <ul class="nav navbar-nav navbar-right">
-                  <li><a href="#"><span class="glyphicon glyphicon-user"></span> Mis Datos</a></li>
-                  <li><a href="/Login"><span class="glyphicon glyphicon-log-out"></span> Salir</a></li>
-                </ul>
-        </div>
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+
+          <span class="icon-bar"></span>
+                                
+        </button>
+        <a class="navbar-brand" routerLink="/Principal">Inicio</a>
       </div>
-    </nav>
-      
-   
+      <div class="collapse navbar-collapse" id="myNavbar">
+      <!-- <div class="navbar-collapse" id="myNavbar"> -->
+          <ul class="nav navbar-nav">
+              <li class="active"><a routerLink="/Juegos">Menú de Juegos</a></li>
+              <li><a data-toggle="tooltip" title="Hooray!" (click)="Juego('Adivina')">Adivina</a></li>
+              <li><a  (click)="Juego('Agilidad')">Agilidad</a></li>
+              <li><a  (click)="Juego('AdivinaMasListado')">Adivina+listado</a></li>
+              <li><a  (click)="Juego('AgilidadaMasListado')">Agilidad+listado</a></li>
+              <li><a  (click)="Juego('PPT')">PPT</a></li>
+              <li><a  (click)="Juego('Anagrama')">Anagrama</a></li>
+              <li><a  (click)="Juego('Simon')">Simon</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#"><span class="glyphicon glyphicon-user"></span> Mis Datos</a></li>
+                <li><a href="/Login"><span class="glyphicon glyphicon-log-out"></span> Salir</a></li>
+              </ul>
+      </div>
+    </div>
+  </nav>
+    
+ 
