--- a/src/app/componentes/principal/principal.component.html
+++ b/src/app/componentes/principal/principal.component.html
@@ -1,78 +1,99 @@
-<app-cabecera>  </app-cabecera>
+<app-cabecera> </app-cabecera>
 
+<body>
+<div class="container">
+  
+  <div class="hero-text"> <!--style="text-align:center">-->
+    <h2>Menú Principal</h2>
+  </div>
 
-
- 
-<div class="container" >
-   
-    <ul class="list-group">
+    <!-- <ul class="list-group">
         <li class="list-group-item list-group-item-danger">
            
                 <div class="media-body">
                     <div class="hero-text">
-                        <h4 >Menú Principal</h4>
+                        <h4>Menú Principal</h4>
                     </div>
                  </div>
-               
              
           </li>
-        <li class="list-group-item list-group-item-success">
-          <a routerLink="/Juegos">
-            <div class="media">
-              <div class="media-left">
-                    <img src="./assets/imagenes/saladejuegosadw.jpg" class="media-object imagenDeMenu" >
+        <li class="list-group-item list-group-item-success"> -->
+
+  <div class= "row justify-content-around">
+      <div class= "col-sm-6 col-lg-3">
+        <div class="card text-center h-100">        
+            <!-- <div class="media">
+              <div class="media-left"> -->
+                    <!-- <img src="./assets/imagenes/saladejuegosadw.jpg" class="media-object imagenDeMenu" > -->
+                    <img src="./assets/imagenes/saladejuegosadw.jpg" class="card-img-top">
+              <!-- </div> -->
+              <div class="card-body">
+                <a routerLink="/Juegos">Juegos</a>
+                <!-- <div class="media-body">
+                <h4 class="media-heading">Juegos</h4> -->
+                <p class="card-text">El método lúdico es un conjunto de estrategias diseñadas para crear un ambiente de armonía en los estudiantes que están inmersos en el proceso de aprendizaje. Este método busca que los alumnos se apropien de los temas impartidos por los docentes utilizando el juego.</p>
               </div>
-              <div class="media-body">
-                <h4 class="media-heading">Juegos</h4>
-                <p>El método lúdico es un conjunto de estrategias diseñadas para crear un ambiente de armonía en los estudiantes que están inmersos en el proceso de aprendizaje. Este método busca que los alumnos se apropien de los temas impartidos por los docentes utilizando el juego.</p>
-              </div>
-             
-            </div> 
-          </a>
-        </li>
-        <li class="list-group-item list-group-item-info">
-            <a routerLink="/Listado">
-              <div class="media">
-                  <div class="media-left">
-                      <img src="./assets/imagenes/listadoadw.jpg" class="media-object imagenDeMenu" >
-                    </div>
-                <div class="media-body">
-                  <h4 class="media-heading">Listados de resultados</h4>
-                  <p>Los listados de los resultados con ordenamiento y busqueda</p>
+        </div> 
+          <!-- </a> -->
+      </div> 
+
+        <!-- </li>
+        <li class="list-group-item list-group-item-info"> -->
+      <div class= "col-sm-6 col-lg-3">
+        <div class="card text-center h-100">        
+    
+              <!-- <div class="media">
+                  <div class="media-left"> -->
+                      <img src="./assets/imagenes/listadoadw.jpg" class="card-img-top">
+                    <!-- </div>
+                <div class="media-body"> -->
+                  <div class="card-body">
+                    <a routerLink="/Listado">Listado de resultados</a>
+
+                  <!-- <h4 class="media-heading">Listados de resultados</h4> -->
+                    <p class="card-text">Los listados de los resultados con ordenamiento y busqueda</p>
+                  </div>
+        </div> 
+            <!-- </a> -->
+      </div> 
+          <!-- </li>
+        <li class="list-group-item list-group-item-warning"> -->
+      <div class= "col-sm-6 col-lg-3">
+        <div class="card text-center h-100">        
+    
+            <!-- <div class="media">
+                <div class="media-left"> -->
+                    <img src="./assets/imagenes/configuracionadw.jpg" class="card-img-top">
+                  <!-- </div>
+              <div class="media-body"> -->
+                <div class="card-body">
+                  <a routerLink="/Juegos">Configuraci&oacute;n</a>
+                  <!-- <h4 class="media-heading">Configuraci&oacute;n</h4> -->
+                  <p class="card-text">Ajustes de la aplicacion y los métodos de autentificación</p>
                 </div>
-                
-              </div> 
-            </a>
-          </li>
-        <li class="list-group-item list-group-item-warning">
-          <a routerLink="/Juegos">
-            <div class="media">
-                <div class="media-left">
-                    <img src="./assets/imagenes/configuracionadw.jpg" class="media-object imagenDeMenu" >
-                  </div>
-              <div class="media-body">
-                <h4 class="media-heading">Configuraci&oacute;n</h4>
-                <p>Ajustes de la aplicacion y los métodos de autentificación</p>
-              </div>
              
-            </div> 
-          </a>
-        </li>
-        <li class="list-group-item list-group-item-warning">
-          <a routerLink="/Jugadores">
-            <div class="media">
-                <div class="media-left">
-                    <img src="./assets/imagenes/jugadoresadw.jpg" class="media-object imagenDeMenu" >
-                  </div>
-              <div class="media-body">
-                <h4 class="media-heading">Jugadores</h4>
-                <p>Listado de jugadores</p>
-              </div>
+        </div> 
+          <!-- </a> -->
+      </div> 
+      <!-- </li>
+        <li class="list-group-item list-group-item-warning"> -->
+      <div class= "col-sm-6 col-lg-3">
+        <div class="card text-center h-100">        
+            <!-- <div class="media">
+                <div class="media-left"> -->
+                    <img src="./assets/imagenes/jugadoresadw.jpg" class="card-img-top">
+                  <!-- </div>
+              <div class="media-body"> -->
+                <div class="card-body">
+                  <a routerLink="/Jugadores">Jugadores</a>
+                  <!-- <h4 class="media-heading">Jugadores</h4> -->
+                  <p class="card-text">Listado de jugadores</p>
+                </div>
              
-            </div> 
-          </a>
-        </li>
-       
-        
-      </ul>
+        </div> 
+          <!-- </a> -->
+      </div> 
+      <!-- </li> -->              
+      <!-- </ul> -->
+    
 </div>
