4to commit. Juegos funcionando

--- a/src/app/componentes/anagrama/anagrama.component.html
+++ b/src/app/componentes/anagrama/anagrama.component.html
@@ -1,3 +1,33 @@
-<p>
+<!-- <p>
   anagrama works!
-</p>
+</p> -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<div style="text-align:center">
+  <h1>
+    {{nuevoJuego.nombre}}!
+  </h1>
+ </div>
+<h2></h2>
+<form name="juego">
+
+  <div>
+    <h2>Anagrama: {{anagrama}}</h2>
+
+    <div *ngIf="terminoJuego" id='resultado' class="boton" style="width: 200px; height: 100px;">
+      <h2>{{resultado}}</h2>
+      <img src="{{imagen}}">
+    </div>
+
+    <div>
+      <input matInput [(ngModel)]='respuestaUsuario' placeholder="Tu respuesta" name="respuestaUsuario">
+    </div>
+
+    <div class="boton">
+      <button mat-raised-button color="accent" class="button btn btn-info btn-lg" (click)="generarAnagrama()">Nuevo</button>
+      <button mat-raised-button color="accent" class="button btn btn-info btn-lg" (click)="comprobarRespuesta()">Listo</button>
+    </div>
+    <div *ngIf="!empezoJuego" id='instrucciones'>
+      <h2>Presione el boton Nuevo para comenzar</h2>
+    </div>
+  </div>
+</form>
