5to commit. Juego propio funcionando

--- a/src/app/componentes/adivina-el-numero/adivina-el-numero.component.css
+++ b/src/app/componentes/adivina-el-numero/adivina-el-numero.component.css
@@ -1,8 +1,13 @@
 
 form {
+    font-family: Impact;
     border: 10px solid #f1f1f1;
     padding: 10px;
     background:gray;
+}
+
+h1, h2{
+    font-family: Impact;
 }
 
 input[type=text], input[type=password] {
