--- a/src/app/componentes/agilidad-aritmetica/agilidad-aritmetica.component.css
+++ b/src/app/componentes/agilidad-aritmetica/agilidad-aritmetica.component.css
@@ -1,5 +1,5 @@
 form{
-    font-family: sans-serif;
+    font-family: Impact;
     border: 10px solid #f1f1f1;
     padding: 10px;
     background:gray;
@@ -13,6 +13,10 @@ input[type=text], input[type=password] {
     /* display: inline-block; */
     border: 1px solid #ccc;
     box-sizing: border-box;
+}
+
+h1, h2{
+    font-family: Impact;
 }
 
 button {
