--- a/src/app/componentes/anagrama/anagrama.component.css
+++ b/src/app/componentes/anagrama/anagrama.component.css
@@ -1,5 +1,5 @@
 form{
-    /* font-family: sans-serif; */
+    font-family: Impact;
     border: 10px solid #f1f1f1;
     padding: 10px;
     background:gray;
@@ -25,7 +25,11 @@ form{
   img{
     width: 100%;  
   }
-  
+
+  h1, h2{
+    font-family: Impact;
+}
+
   h2, h3{
     color: white;
   }
