--- a/src/app/componentes/cabecera/cabecera.component.css
+++ b/src/app/componentes/cabecera/cabecera.component.css
@@ -6,9 +6,8 @@
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
-    font-family: sans-serif;
+    font-family: Impact;
 }
-
 
 .hero-text {
 text-align: center;
