--- a/src/app/componentes/login/login.component.css
+++ b/src/app/componentes/login/login.component.css
@@ -6,7 +6,7 @@
 }
 label{
     color: #61e6fd;
-    font-family: sans-serif;
+    font-family: Impact;
 }
 input[type=text], input[type=password] {
     width: 100%;
