--- a/src/app/componentes/ppt/ppt.component.css
+++ b/src/app/componentes/ppt/ppt.component.css
@@ -1,5 +1,5 @@
 form{
-    font-family: sans-serif;
+    font-family: Impact;
     border: 10px solid #f1f1f1;
     padding: 10px;
     background:gray;
@@ -27,6 +27,10 @@ button {
 
 button:hover {
     opacity: 0.8;
+}
+
+h1, h2{
+    font-family: Impact;
 }
 
 h2{
