--- a/src/app/componentes/principal/principal.component.css
+++ b/src/app/componentes/principal/principal.component.css
@@ -19,8 +19,8 @@
     }
     
     p, a, h2{
-        font-family: sans-serif;
+        font-family: Impact;
     }
     p:hover{
-        font-family: sans-serif;
+        font-family: Impact;
     }
