--- a/src/app/componentes/menu-card/menu-card.component.css
+++ b/src/app/componentes/menu-card/menu-card.component.css
@@ -1,5 +1,5 @@
 .container{
-  font-family: sans-serif;
+  font-family: Impact;
   border: 10px solid #f1f1f1;
   padding: 10px;
   background-image:url('../../../assets/imagenes/backTron2adw.png');
@@ -30,7 +30,7 @@ input[type=text], input[type=password] {
 /* Add some padding inside the card container */
 .container{
   padding: 2px 16px;
-  font-family: sans-serif;
+  font-family: Impact;
 }
 .redes {
   padding: 2px;
