--- a/src/app/componentes/quien-soy/quien-soy.component.css
+++ b/src/app/componentes/quien-soy/quien-soy.component.css
@@ -2,8 +2,8 @@ nav{
     /* background-image:url('../../../assets/imagenes/backTron2adw.png');  */
     background-color:#61e6fd;
 }
-h1{
-    font-family: sans-serif;
+h1, h3, p{
+    font-family: Impact;
 }
 
 .imagenDeQuienSoy{
