6to commit. Login + listados

--- a/src/app/componentes/listado/listado.component.html
+++ b/src/app/componentes/listado/listado.component.html
@@ -1,14 +1,22 @@
 
 <!--input type="button" (click)="llamaService()" class="btn btn-info" value="Pulsame" > 
 <input type="button" (click)="llamaServicePromesa()" class="btn btn-info" value="Pulsame Promesa" --> 
+<body>
 
-<!-- Centered Pills -->
-<ul class="nav nav-pills nav-justified">
-    <li class="active"><a routerLink="/Principal">Sala de Juegos</a></li>
-    <li><a (click)="llamaService()">Servicio</a></li>
-    <li><a (click)="llamaServicePromesa()">Serv Promesa</a></li>
-    <li><a (click)="llamaServicePromesa()">Serv observable</a></li>
-  </ul>
+  <!-- Centered Pills -->
+  <ul class="nav nav-pills nav-justified">
+      <li class="active"><a routerLink="/Principal">Sala de Juegos</a></li>
+      <!-- <li><a (click)="llamaService()">Servicio</a></li>
+      <li><a (click)="llamaServicePromesa()">Serv Promesa</a></li>
+      <li><a (click)="llamaServicePromesa()">Serv observable</a></li> -->
   
-<app-listado-de-resultados [listado]="listadoParaCompartir"> </app-listado-de-resultados>
-
+      <li><a (click)="todos()">Todos los resultados</a></li>
+      <li><a (click)="ganadores()">Solo ganadores</a></li>
+      <li ><a (click)="perdedores()">Solo perdedores</a></li>
+    </ul>
+    
+  <!-- <app-listado-de-resultados [listado]="listadoParaCompartir"> </app-listado-de-resultados> -->
+  <app-listado-de-resultados [listado]="listaR"> </app-listado-de-resultados>
+  
+  </body>
+  
